[tool.poetry]
name = "ffmirror"
version = "0.4.1"
description = "Local mirror for Internet fiction sites"
authors = ["alethiophile <tomdicksonhunt@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/alethiophile/ffmirror"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.7"
html5lib = "^1.0"
python-dateutil = "^2.7"
html2text = "^2019.9"
requests = "^2.22"
click = "^8.1.3"
attrs = "^22.1.0"
cloudscraper = {version = "^1.2.50", optional = true}
SQLAlchemy = "^1.4.42"
selenium = {version = "^4.7.2", optional = true}
undetected-chromedriver = {version = "^3.1.7", optional = true}
flask = {version = "^2.2.2", optional = true}
celery = {version = "^5.2.7", optional = true}

[tool.poetry.dev-dependencies]
alembic = "^1.8.1"
mypy = "^0.982"
sqlalchemy-stubs = "^0.4"
types-requests = "^2.28.11"

[tool.poetry.scripts]
ffdl = "ffmirror.cli:run_dl"
ffdb = "ffmirror.cli:run_db_op"

[tool.poetry.extras]
selenium = ["selenium", "undetected-chromedriver"]
webview = ["flask", "celery"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
